--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ django-shopping-cart==0.1
 gunicorn==20.1.0
 packaging==21.3
 Pillow==9.3.0
-psycopg2-binary==2.9.5
+psycopg2==2.9.5
 pyparsing==3.0.9
 python-dotenv==0.21.0
 redis==4.3.5
