--- a/requirements.txt
+++ b/requirements.txt
@@ -4,12 +4,14 @@ certifi==2022.9.24
 cloudinary==1.30.0
 Django==4.1.3
 django-shopping-cart==0.1
+djangorestframework==3.14.0
 gunicorn==20.1.0
 packaging==21.3
 Pillow==9.3.0
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pyparsing==3.0.9
 python-dotenv==0.21.0
+pytz==2022.6
 redis==4.3.5
 six==1.16.0
 sqlparse==0.4.3
