--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==2.1.1
 cloudinary==1.30.0
 Django==4.1.3
 django-shopping-cart==0.1
+djangorestframework==3.14.0
 gunicorn==20.1.0
 idna==3.4
 packaging==21.3
