--- a/nginx/conf.d/web.conf
+++ b/nginx/conf.d/web.conf
@@ -12,46 +12,27 @@ server {
     }
 
     location / {
-        proxy_pass http://wonderlanders;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header Host $host;
-        proxy_redirect off;
+        return 301 https://wonderlanders.tk$request_uri;
     }
-
-    location /static/ {
-            alias /home/app/web/staticfiles/;
-    }
-
-
-
-
-
-
-
-
-
-    # location / {
-    #     return 301 https://petstagram-demo-demo.tk$request_uri;
-    # }
 }
 
-# server {
-#    listen 443 default_server ssl http2;
-#    listen [::]:443 ssl http2;
+server {
+   listen 443 default_server ssl http2;
+   listen [::]:443 ssl http2;
 
-#    server_name petstagram-demo-demo.tk;
+   server_name wonderlanders.tk;
 
-#    ssl_certificate /etc/nginx/ssl/live/petstagram-demo-demo.tk/fullchain.pem;
-#    ssl_certificate_key /etc/nginx/ssl/live/petstagram-demo-demo.tk/privkey.pem;
+   ssl_certificate /etc/nginx/ssl/live/wonderlanders.tk/fullchain.pem;
+   ssl_certificate_key /etc/nginx/ssl/live/wonderlanders.tk/privkey.pem;
 
-#    location / {
-#        proxy_pass http://petstagram;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_set_header Host $host;
-#        proxy_redirect off;
-#    }
+   location / {
+       proxy_pass http://wonderlanders;
+       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+       proxy_set_header Host $host;
+       proxy_redirect off;
+   }
 
-#    location /static/ {
-#         alias /home/app/web/staticfiles/;
-#    }
-# }
+   location /static/ {
+        alias /home/app/web/staticfiles/;
+   }
+ }
